Adding GitHub link

--- a/index.html
+++ b/index.html
@@ -68,9 +68,12 @@
         }
 
         .contact{
-            height: 100px;
             background-color: brown;
             text-align: center;
+            padding: 20px;
+        }
+        .contact a {
+            color: white;
         }
     </style>
 </head>
@@ -159,6 +162,8 @@
     <div class="contact">
         <h1 class="h_tag">Contact</h1>
         <a href="https://www.linkedin.com/in/zia-alam-102572227/" target="_blank">LinkedIn</a>
+        <br>
+        <a href="https://github.com/ZiaAlam7/Web_Engineering_Assignment.git" target="_blank">GitHub Portfolio Code</a>
     </div>
 
 
